# UBS

Jessie/tryRag/: events_with_economic_data.csv  extract_information.py  key_param.py  load_data.py
MVP/: Dockerfile  README.md  app.py  app_not_normalized.py  app_old.py  change.py  changeEvents.py  embedding.py  extract_information.py  fly.toml  get_events_quants_gaussian.py  get_timeline_quant_gaussian.py  key_params.py  load_data.py  pyproject.toml  web.py
MVP/classes/: column.py
MVP/data/: economic_data.csv  events_with_economic_data.csv  example_jessie.csv  example_jessie.json  extended_economic_data.csv  extended_events_with_economic_data.csv
MVP/frontend/: .eslintrc.json  bun.lockb  package.json  tailwind.config.ts  tsconfig.json
MVP/frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
MVP/frontend/app/api/chat/: route.ts
MVP/frontend/components/ui/: draggable-chart.tsx  likelihood-indicator.tsx
MVP/templates/: index.html  index_old.html
Mihail/: get_events_quants_gaussian.py  get_timeline_quant_gaussian.py  main.py  utils.py
Mihail/classes/: column.py  event.py  multigauss.py
ajit/: MCOILBRENTEU.csv  events_with_economic_data_2.csv  hello.ipynb  prepare_economic_data.ipynb  prepare_events.ipynb  pyproject.toml
