[project]
name = "mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.18",
    "dash>=2.18.2",
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "weaviate-client>=4.9.3",
    "openai>=1.55.0",
]
